--- a/src/style.css
+++ b/src/style.css
@@ -7,12 +7,47 @@ div,p{
   padding: 0px;
 }
 
-.nav-container{
+.container{
   width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.content-container{
+  width: 90%;
+  height: 500px;
+  background: #ffffff;
+}
+
+.header-container{
+  width: 100%;
+  height: 45px;
+  background: #000000;
   display: flex;
   flex-direction: row;
-  
+}
+
+.header-box{
+  margin-right: 10px;
+}
+
+.header-logo{
+  width: 45px;
+  height: 45px;
+}
+
+.nav-container{
+  display: flex;
+  flex-direction: row;
 }
 .nav-container a {
   margin-right: 10px;
+  line-height: 45px;
+  color: #ffffff;
+}
+
+.route-container{
+  padding: 20px;
 }
